rotary: update config

--- a/iqaudio-rotary-volume/CMakeLists.txt
+++ b/iqaudio-rotary-volume/CMakeLists.txt
@@ -7,7 +7,9 @@ INSTALL(PROGRAMS ${CMAKE_CURRENT_SOURCE_DIR}/scripts/iqaudio-rotary-volume.servi
 
 SET(CPACK_GENERATOR "DEB")
 SET(CPACK_DEBIAN_PACKAGE_MAINTAINER "neonsoftware")
-SET(CPACK_DEBIAN_PACKAGE_DEPENDS wget)
+SET(CPACK_DEBIAN_PACKAGE_DEPENDS curl)
+SET(CPACK_DEBIAN_PACKAGE_ARCHITECTURE armhf)
+
 #Set the script file preinst to execute before installation
 set( CPACK_DEBIAN_PACKAGE_CONTROL_EXTRA "${CMAKE_CURRENT_SOURCE_DIR}/scripts/preinst;${CMAKE_CURRENT_SOURCE_DIR}/scripts/postinst;${CMAKE_CURRENT_SOURCE_DIR}/scripts/prerm;" )
 INCLUDE(CPack)
